@@ -2,6 +2,10 @@
 
 	* R/zzz.R: Updated for R 2.15.1 using loadModule() and evalqOnLoad()
 
+	* src/RcppBDT.cpp (RCPP_MODULE): Expose the module class as 'bdtDate'
+	* R/zzz.R: Updated accordingly
+	* man/bdt.Rd: Updated accordingly
+
 	* man/bdt.Rd: Added two required alias'es flagged by R CMD check
 
 2012-04-11  Dirk Eddelbuettel  <edd@debian.org>
